# chores

./: .gitignore  Cargo.toml  LICENSE.md  README.md  config.json.example  package-lock.json  tsconfig.json
assets/html/: index.html
assets/ts/: index.ts  test.ts
migrations/: 20221103000406_create_chores.sql  20221106232517_create_last_update.sql  20221107140137_create_flashes.sql
src/: main.rs  metar.rs  weather.rs
