[package]
name = "chores"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
axum = "0.5.16"
axum-extra = { version = "0.3.7", features = ["spa"] }
chrono = "0.4.22"
clap = { version = "4.0.15", features = ["derive"] }
cron = "0.12.0"
humantime-serde = "1.1.1"
mime_guess = "2.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.3.4", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
